2011-11-05 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Fixed memory leak concerning MO messages.
    Thanks to Victor Luchitz for reporting.

2011-05-13 Rene Kluwen <rene.kluwen at chimit.nl>
    * configure.in: the new configure file didn't seem to work, after make rpm.
    Couldn't find the Kannel libraries. This patch fixes that.

2011-05-09 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Default GSM character set is converted to UTF-8 (Kannel's internal
    way of exchanging messages). The facilitates foreign (e.g. greek) characters.
    Thanks to Nii Ako Ampa-Sowa (ampasowa at gmail.com) for the patch.

2011-04-07 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Tested system_type on being provided by the smpp client,
    because if not, opensmppbox would crash. Thanks to info at xen-housing.sk for reporting.

2010-11-10 Alexander Malysh <amalysh at kannel.org>
    * gw/opensmppbox.c: applied patch that adds validity and deferred handling.
      Thanks to "XEN-Housing s.r.o." <info at xen-housing.sk> and me :-) for this patch.

2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * gw/opensmppbox.c: remove 0-padding for %s type from snprintf(), as it
      is not defined according to the man page and we get compiler warnings.
      
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * gw/opensmppbox.c: remove various compiler warnings. NLC.
    
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * autotools/*, gw/Makefile.in, aclocal.m4, configure, Makefile.in: new 
      configure file after bootstrapping for distribution.
      
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * */*: changing the add-on module name to OpenSMPPBox, along with all 
      references in the output and the configuration file aspects.
    
2010/09/15
    Sending negative ack upon receiving invalid MO/DLR so messages won't stay in bearerbox store.
    Patch by Victor Luchitz.

2010/08/23