@@ -1,3 +1,11 @@
+2012-12-11 Rene Kluwen <rene.kluwen at chimit.nl>
+        Reverted back to v63 due to too many bugs and problems in these sources.
+        At the same time, introducing a new ESME-to-MT routing possibility. See documentation about 'smsc-route'.
+        Users that currently rely on the MO-routing patch are encouraged to use bearerbox's 'smsbox-route'
+        in combination with 'use-system-id-as-box-id'. It works exactly the same.
+        The "old" opensmppbox is still availabe as a branch called "single-bearerbox-connection".
+        You can still check that branch out if your software is relying on it.
+
 2011-11-05 Rene Kluwen <rene.kluwen at chimit.nl>
     * gw/opensmppbox.c: Fixed memory leak concerning MO messages.
     Thanks to Victor Luchitz for reporting.
